fix(BalanceTable): Account column was not 100% width on small screen

--- a/src/ducks/balance/components/BalanceTable.styl
+++ b/src/ducks/balance/components/BalanceTable.styl
@@ -28,6 +28,9 @@
     color coolGrey
     composes mobile-row-label from '../../../components/Table/styles.styl'
 
+    +small-screen()
+        maxed-flex-basis 100%
+
 .ColumnBank
     maxed-flex-basis 30%
     color coolGrey
